tests/results/syntax_errors/multiline_comment_open_unmatched.own
compile::stdout 0

compile::stderr 5
tests/inputs/syntax_errors/multiline_comment_open_unmatched.own:4:6:[1;31merror[0;39m:unmatched opening `/*`
     3 | fn main() i32 {
     4 |     /*
       |      ^
     5 |     return 0

compile::return_code 1

